# ice-free-port

./: .gitignore
service/: .env  Cargo.toml
service/codec/: Cargo.toml
service/codec/src/: lib.rs  tests.rs
service/entity/: Cargo.toml
service/entity/src/: freight_forwarder.rs  lib.rs  prelude.rs  registry.rs  shipping_item.rs  shipping_order.rs  storage.rs  warehouse.rs
service/src/: error.rs  errors.rs  main.rs  reply.rs  router.rs  state.rs
service/src/handlers/: freight_forwarder.rs  mod.rs  shipping.rs  storage.rs  user.rs  warehouse.rs
service/src/middleware/: auth.rs
service/src/models/: mod.rs  shipping.rs
sql/schema/: registry.sql  shipment.sql  storage.sql
