[package]
name = "service"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[dependencies]
# 异步运行时
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
# 网络服务
poem = { version = "1.3.31" }
# 序列化 和 Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.14.0"
# 日志
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 环境变量配置文件
dotenv = "0.15"
# 错误处理宏
thiserror = "1.0"
# 雪花算法
rs-snowflake = "*"
# 数据库实体
entity = { path = "entity" }

# 数据库ORM
[dependencies.sea-orm]
version = "^0.8.0"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
